# gates-hdl

./: 0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  style.css
.devcontainer/: devcontainer.json
.github/workflows/: gh_pages.yaml
docs/: hdl.ebnf  hdl.xhtml
src/: lib.rs  main.rs
src/compile/: compose.rs
src/compiler/: compose.rs  mermaid.rs  mod.rs
src/parser/: ast.rs  mod.rs
src/type_check/: mod.rs  ordered_hash_map.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
