[package]
name = "gates-hdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }
scrap = { git = "https://github.com/ncatelli/scrap", tag = "v1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
